# pytest-llm-report

./: .coverage  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .snyk  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  blueprint.md  codecov.yml  debug_cov_v2.py  human_instructions.md  implementation.md  index.html  mkdocs.yml  pyproject.toml  pytest-llm-report_human_instructions.md  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_report.md
.github/workflows/: ci.yml  cleanup-pr.yml  codeql.yml  dependency-review.yml  docs.yml  pip-audit.yml  release.yml  snyk.yml
adr/0001-coverage-contexts/: index.html
adr/0002-llm-providers/: index.html
adr/0003-report-formats/: index.html
aggregation/: index.html
collected-reports/: py312.json
configuration/: index.html
coverage/: index.html
deployment/: index.html
docs/: aggregation.md  configuration.md  coverage.md  deployment.md  getting-started.md  index.md  privacy.md  providers.md  report-format.md  security.md  test-report.md  troubleshooting.md
docs/adr/: 0001-coverage-contexts.md  0002-llm-providers.md  0003-report-formats.md
docs/example-report/: index.html
example-report/: index.html
examples/minimal/: pyproject.toml
examples/minimal/tests/: test_core.py
examples/with-litellm/: pyproject.toml
examples/with-ollama/: pyproject.toml
examples/with-ollama/example_pkg/: calculator.py
getting-started/: index.html
policies/: llm-data-handling.md  privacy.md  security-baseline.md  threat-model.md
pr-10/configuration/: index.html
pr-10/reports/: index.html  latest.json
pr-11/: sitemap.xml
pr-11/coverage/: index.html
pr-11/reports/: index.html  latest.json
pr-11/security/: index.html
pr-11/troubleshooting/: index.html
pr-12/reports/: index.html  latest.json
pr-13/: index.html
pr-13/privacy/: index.html
pr-14/: 404.html  index.html
pr-24/: index.html
pr-25/: index.html  sitemap.xml
pr-26/: index.html  sitemap.xml
pr-27/: index.html
pr-28/: index.html
pr-29/: index.html  sitemap.xml
pr-30/: index.html
pr-31/: index.html
pr-32/: index.html
pr-33/: 404.html  index.html
pr-34/: index.html
pr-35/: index.html
pr-35/example-report/: index.html  pyproject.toml
pr-36/: index.html  sitemap.xml
pr-5/: 404.html  index.html  sitemap.xml
pr-7/: index.html
privacy/: index.html
providers/: index.html
report-format/: index.html
reports/: index.html  latest.json
schemas/: report.schema.json
scripts/: build_git_info.py  build_report_pdf.py  build_wheel.sh  dev.sh  fmt.sh  lint.sh  regenerate_example.sh  test.sh  verify_local_ollama.py
search/: search_index.json
security/: index.html
test-report/: index.html
tests/: conftest.py  test_aggregation.py  test_annotator.py  test_annotator_maximal.py  test_batching.py  test_cache.py  test_collector.py  test_collector_maximal.py  test_context_compression.py  test_context_util.py  test_coverage_map.py  test_coverage_map_maximal.py  test_fs.py  test_gemini_coverage_v2.py  test_gemini_provider.py  test_integration_gate.py  test_llm.py  test_llm_annotator.py  test_llm_contract.py  test_llm_providers.py  test_models.py  test_options.py  test_options_coverage.py  test_options_extended.py  test_options_maximal.py  test_plugin_integration.py  test_plugin_maximal.py  test_prompts.py  test_render.py  test_report_writer.py  test_smoke_pytester.py
troubleshooting/: index.html
(+319 files in other folders)
