[project]
name = "example-with-ollama"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-llm-report[ollama]>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--cov=example_pkg",
    "--cov-context=test",
    "--cov-report=",
    "--llm-report=reports/pytest_llm_report.html",
    "--llm-report-json=reports/pytest_llm_report.json",
]

llm_report_provider = "ollama"
llm_report_model = "llama3.2"
llm_report_context_mode = "complete"
llm_max_tests = 50



[tool.coverage.run]
source = ["pytest_llm_report"]
branch = false
